@@ -29,6 +29,7 @@ import gtk
 import gst
 
 import pitivi.instance as instance
+import pitivi.configure as configure
 
 from timeline import TimelineWidget
 from sourcefactories import SourceFactoriesWidget
@@ -127,7 +128,7 @@ class PitiviMainWindow(gtk.Window):
         hpaned.pack2(viewerframe, resize=False, shrink=False)
 
         #application icon
-        self.set_icon_from_file("application-pitivi.png")
+        self.set_icon_from_file(configure.get_global_pixmap_dir() + "/application-pitivi.png")
 
     ## UI Callbacks
 
@@ -164,7 +165,7 @@ class PitiviMainWindow(gtk.Window):
 	authors = ["Edward Hervey <edward@fluendo.com>" ]
 	abt.set_authors(authors)
 	abt.set_license("GNU Lesser Public License\nSee http://www.gnu.org/copyleft/lesser.html for more details")
-        abt.set_icon_from_file("application-pitivi.png")
+        abt.set_icon_from_file(configure.get_global_pixmap_dir() + "/application-pitivi.png")
 	abt.show()
 
 
